# release-agent

./: .env.example  .gitignore  DEPLOYMENT_REPO_SETUP.md  Dockerfile  E2E_TEST_GUIDE.md  README.md  TESTING.md  pyproject.toml  release-manifest.json  requirements.txt  setup.sh
.github/workflows/: build-image.yml  release-promote.yml
adk_release_agent/: __init__.py  agent.py  deploy.py  deploy_workflow.py  safety.py  tools.py
adk_release_agent/skills/release-controls/: SKILL.md
adk_release_agent/skills/release-deploy/: SKILL.md
adk_release_agent/skills/release-ops/: SKILL.md
adk_release_agent/skills/release-pr/: SKILL.md
adk_release_agent/skills/release-status/: SKILL.md
deployment-repo/: .gitignore  PUSH_INSTRUCTIONS.md  README.md
deployment-repo/.github/workflows/: on-merge-deploy.yml
deployment-repo/configs/: prod-images.json
design/: DESIGN.md  DESIGN_SUMMARY.md  README.md  REPO_PAT_SESSION_INPUT.md  spec.md
examples/: create-deployment-pr.yml
helm/release-copilot/: .helmignore  Chart.yaml  README.md  values.yaml
helm/release-copilot/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  destinationrule.yaml  gateway.yaml  secret.yaml  service.yaml  serviceaccount.yaml  virtualservice.yaml
k8s/: deployment.yaml  secret.example.yaml
scripts/: test_gh_tools.py
src/release_agent/: __init__.py  adk_service.py  agent.py  app_fastapi.py  app_gradio.py  budget.py  cli.py  config.py  multiagent.py  session_creds.py  testing_agent.py  tools_cli.py
src/release_agent/agent/: __init__.py  graph.py  llm.py  nodes.py  parsing.py  state.py
src/release_agent/static/: app.js
src/release_agent/tools/: __init__.py  _common.py  controls.py  gh_tools.py  manifest.py  promotion.py  pull_requests.py  release_window.py
tests/: test_adk_adapter.py  test_adk_features.py  test_adk_service.py  test_change_request.py  test_config_repos.py  test_controls.py  test_deploy_model.py  test_deploy_workflow.py  test_fastapi_adk.py  test_multiagent.py  test_pipeline_smoke.py  test_remove_from_release.py  test_safety_and_skills.py  test_session_creds.py  test_ui_js.py
