[project]
name = "release-copilot"
version = "0.2.0"
description = "ADK + FastAPI release copilot that promotes container images via GitHub Actions (GKE/ASM)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core agent framework
    "google-adk>=1.25.0",
    # Vertex AI Gemini
    "google-genai>=1.0",
    # Web server (production UI)
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # GitHub, config, utils
    "PyGithub>=2.3",
    "pydantic>=2.9",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "rich>=13.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2"]  # reserved for future shared ADK session storage
tracing = ["langsmith>=0.3"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.uv]
# This is a deployable application, not a library — install dependencies only,
# don't try to build/install the `release_agent` package itself. The app is run
# with `uvicorn ... --app-dir src`.
package = false

[tool.ruff]
line-length = 100
